# MedMax

./: .env.example  .gitignore  EVALUATION_SUMMARY.md  RAG_USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_scraper.py  test.ipynb
.github/instructions/: git_writer.instructions.md
scripts/: 01_populate_qdrant.bat  02_rag_query.bat  03_run_evaluation.bat  03_test_all_engines.bat  03_test_evaluation.bat  04_run_evaluation.bat  05_test_evaluation.bat  06_compare_engines.bat  07_test_zero_shot_evaluation.bat  08_zero_shot_query.bat
src/: base_scraper.py  cochrane_scraper.py  config.py  pubmed_scraper.py  who_scraper.py
src/dspy_modules/: __init__.py  medical_qa.py  signatures.py  zero_shot_qa.py
src/evaluation/: __init__.py  main.py  medreqal_evaluator.py  metrics.py
src/observability/: langfuse_config.py  token_cost.py
src/rag/: __init__.py  client.py  main.py  models.py  query_engine.py  retriever.py
src/vector_store/: __init__.py  client.py  embed.py  ingestion.py  loader.py  main.py  wiki_collect.py  wikipedia.py
