[project]
name = "medmax"
version = "0.1.0"
description = "MSc project which contains web scrapers for WHO, PubMed, and Cochrane and RAG pipeline"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"